# nrf52840-cmake-ble_app_hrs_freertos

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  main.cpp  nRF5-libraries.cmake
cmake/: nRF5-cmake.cmake  nRF5-libraries.cmake  tc_arm-none-eabi-gcc.cmake
src/config/: sdk_config.h
